--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -48,10 +48,10 @@
 </p><p><span id="Keyboard_modifiers"></span>
 </p>
 <h3><span id=".D0.9C.D0.BE.D0.B4.D0.B8.D1.84.D0.B8.D0.BA.D0.B0.D1.82.D0.BE.D1.80.D0.B8_.D0.BD.D0.B0_.D0.BA.D0.BB.D0.B0.D0.B2.D0.B8.D0.B0.D1.82.D1.83.D1.80.D0.B0.D1.82.D0.B0"></span><span class="mw-headline" id="&#1052;&#1086;&#1076;&#1080;&#1092;&#1080;&#1082;&#1072;&#1090;&#1086;&#1088;&#1080;_&#1085;&#1072;_&#1082;&#1083;&#1072;&#1074;&#1080;&#1072;&#1090;&#1091;&#1088;&#1072;&#1090;&#1072;">&#1052;&#1086;&#1076;&#1080;&#1092;&#1080;&#1082;&#1072;&#1090;&#1086;&#1088;&#1080; &#1085;&#1072; &#1082;&#1083;&#1072;&#1074;&#1080;&#1072;&#1090;&#1091;&#1088;&#1072;&#1090;&#1072;</span></h3>
-<p>The usual keyboard modifiers can be used in the Tree View. The modifiers can be combined as well.
+<p>&#1054;&#1073;&#1080;&#1095;&#1072;&#1081;&#1085;&#1080;&#1090;&#1077; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1082;&#1072;&#1090;&#1086;&#1088;&#1080; &#1085;&#1072; &#1082;&#1083;&#1072;&#1074;&#1080;&#1072;&#1090;&#1091;&#1088;&#1072;&#1090;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;. &#1052;&#1086;&#1076;&#1080;&#1092;&#1080;&#1082;&#1072;&#1090;&#1086;&#1088;&#1080;&#1090;&#1077;  &#1084;&#1086;&#1075;&#1072;&#1090; &#1089;&#1098;&#1097;&#1086; &#1076;&#1072; &#1089;&#1077; &#1082;&#1086;&#1084;&#1073;&#1080;&#1085;&#1080;&#1088;&#1072;&#1090;.
 </p>
-<ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>: hold down this key to select multiple objects.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>: hold down this key to select all objects between a previously selected object and the next selected object.</li></ul>
+<ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>: &#1079;&#1072;&#1076;&#1088;&#1098;&#1078;&#1090;&#1077; &#1090;&#1086;&#1079;&#1080; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096;, &#1079;&#1072; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>: &#1079;&#1072;&#1076;&#1088;&#1098;&#1078;&#1090;&#1077; &#1090;&#1086;&#1079;&#1080; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096;, &#1079;&#1072; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1084;&#1077;&#1078;&#1076;&#1091; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090; &#1080; &#1089;&#1083;&#1077;&#1076;&#1074;&#1072;&#1097;&#1080;&#1103; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090;.</li></ul>
 <h3><span class="mw-headline" id="Keyboard_shortcuts">Keyboard shortcuts</span></h3>
 <p>The following keyboard shortcuts are available when the focus is on the Tree View:
 </p>
@@ -161,12 +161,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118121700
+Cached time: 20260118121901
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.165 seconds
-Real time usage: 0.219 seconds
+CPU time usage: 0.147 seconds
+Real time usage: 0.222 seconds
 Preprocessor visited node count: 752/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -177,19 +177,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.966      1 -total
- 30.10%   12.934      1 Template:Std_Base_navi/bg
- 21.49%    9.234      3 Template:Navigation_menu_2
- 16.12%    6.925      1 Template:Interface_navi/bg
- 12.70%    5.457      1 Template:Userdocnavi/bg
-  8.69%    3.734      2 Template:PropertyData
-  5.34%    2.296      3 Template:Variable
-  4.52%    1.942      1 Template:PropertyView
-  4.45%    1.911     19 Template:KEY
-  3.85%    1.656      1 Template:FALSE
+100.00%   55.376      1 -total
+ 21.46%   11.881      1 Template:Std_Base_navi/bg
+ 21.01%   11.636      1 Template:Interface_navi/bg
+ 15.72%    8.706      3 Template:Navigation_menu_2
+ 11.04%    6.114      2 Template:PropertyData
+ 10.52%    5.823      1 Template:Userdocnavi/bg
+  6.70%    3.709      3 Template:Variable
+  6.66%    3.687      1 Template:PropertyView
+  4.57%    2.533      1 Template:TOCright
+  4.39%    2.429      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121700 and revision id 1740419. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121901 and revision id 1740423. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
