--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -52,7 +52,9 @@
 </p>
 <ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>: &#1079;&#1072;&#1076;&#1088;&#1098;&#1078;&#1090;&#1077; &#1090;&#1086;&#1079;&#1080; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096;, &#1079;&#1072; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>: &#1079;&#1072;&#1076;&#1088;&#1098;&#1078;&#1090;&#1077; &#1090;&#1086;&#1079;&#1080; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096;, &#1079;&#1072; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1084;&#1077;&#1078;&#1076;&#1091; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090; &#1080; &#1089;&#1083;&#1077;&#1076;&#1074;&#1072;&#1097;&#1080;&#1103; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090;.</li></ul>
-<h3><span class="mw-headline" id="Keyboard_shortcuts">Keyboard shortcuts</span></h3>
+<p><span id="Keyboard_shortcuts"></span>
+</p>
+<h3><span id=".D0.9A.D0.BB.D0.B0.D0.B2.D0.B8.D1.88.D0.BD.D0.B8_.D0.BA.D0.BE.D0.BC.D0.B1.D0.B8.D0.BD.D0.B0.D1.86.D0.B8.D0.B8"></span><span class="mw-headline" id="&#1050;&#1083;&#1072;&#1074;&#1080;&#1096;&#1085;&#1080;_&#1082;&#1086;&#1084;&#1073;&#1080;&#1085;&#1072;&#1094;&#1080;&#1080;">&#1050;&#1083;&#1072;&#1074;&#1080;&#1096;&#1085;&#1080; &#1082;&#1086;&#1084;&#1073;&#1080;&#1085;&#1072;&#1094;&#1080;&#1080;</span></h3>
 <p>The following keyboard shortcuts are available when the focus is on the Tree View:
 </p>
 <ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F</span>: opens a search box at the bottom of the tree, allowing to search and reach objects using their internal names or labels. To hide this search box, click inside it so that it has the focus and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>.</li>
@@ -161,13 +163,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118121901
+Cached time: 20260118121952
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.222 seconds
-Preprocessor visited node count: 752/1000000
+CPU time usage: 0.130 seconds
+Real time usage: 0.217 seconds
+Preprocessor visited node count: 753/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -177,19 +179,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.376      1 -total
- 21.46%   11.881      1 Template:Std_Base_navi/bg
- 21.01%   11.636      1 Template:Interface_navi/bg
- 15.72%    8.706      3 Template:Navigation_menu_2
- 11.04%    6.114      2 Template:PropertyData
- 10.52%    5.823      1 Template:Userdocnavi/bg
-  6.70%    3.709      3 Template:Variable
-  6.66%    3.687      1 Template:PropertyView
-  4.57%    2.533      1 Template:TOCright
-  4.39%    2.429      1 Template:FALSE
+100.00%   49.294      1 -total
+ 28.73%   14.164      1 Template:Interface_navi/bg
+ 21.15%   10.425      1 Template:Std_Base_navi/bg
+ 21.04%   10.369      3 Template:Navigation_menu_2
+ 14.87%    7.328      1 Template:Userdocnavi/bg
+  7.11%    3.504      2 Template:PropertyData
+  4.85%    2.392      1 Template:PropertyView
+  4.59%    2.262      3 Template:Variable
+  4.34%    2.137      1 Template:FALSE
+  3.09%    1.525     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121901 and revision id 1740423. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121952 and revision id 1740426. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
