--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -171,9 +171,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainLock.svg&amp;filetimestamp=20240101173404&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainLock.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainLock.html" title="Sketcher ConstrainLock">Zamknout polohu</a>: Pou&#382;ije vazbu <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizont&aacute;ln&iacute; rozm&#283;r</a> a <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertik&aacute;ln&iacute; rozm&#283;r</a> na body. Pokud je vybr&aacute;n jeden bod, omezen&iacute; odkazuj&iacute; na po&#269;&aacute;tek n&aacute;&#269;rtu. Pokud jsou vybr&aacute;ny dva nebo v&iacute;ce bod&#367;, omezen&iacute; odkazuj&iacute; na posledn&iacute; bod ve v&yacute;b&#283;ru.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincidentUnified.svg&amp;filetimestamp=20240106131932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincidentUnified.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincidentUnified.html" title="Sketcher ConstrainCoincidentUnified">Vazba toto&#382;nosti (sjednocen&iacute;)</a>: Vytvo&#345;&iacute; soub&#283;&#382;nou vazbu mezi body, zafixuje body na hran&aacute;ch nebo os&aacute;ch nebo vytvo&#345;&iacute; soust&#345;ednou vazbu. Kombinuje n&aacute;stroje <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Vazbu soub&#283;&#382;nosti</a> a <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Vazbu bodu na objektu</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincident.svg&amp;filetimestamp=20240101173005&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Soub&#283;&#382;n&aacute; vazba</a>: Vytvo&#345;&iacute; soub&#283;&#382;nou vazbu mezi body nebo soust&#345;ednou vazbu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPointOnObject.svg&amp;filetimestamp=20240101173043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Point-On-Object Constraint</a>: Fixes points on edges or axes.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPointOnObject.svg&amp;filetimestamp=20240101173043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Vazba bodu na objekt</a>: Upravuje body na hran&aacute;ch nebo os&aacute;ch.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompHorVer"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorVer.svg&amp;filetimestamp=20240102154008&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorVer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span>Horizontal/Vertical Constraints:</span></li></ul>
 </div>
@@ -678,13 +676,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118121954
+Cached time: 20260118122155
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.424 seconds
-Real time usage: 0.665 seconds
-Preprocessor visited node count: 1490/1000000
+CPU time usage: 0.419 seconds
+Real time usage: 0.591 seconds
+Preprocessor visited node count: 1489/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -694,19 +692,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.539      1 -total
- 22.03%    8.710      1 Template:Sketcher_Tools_navi/cs
- 16.58%    6.555      1 Template:Userdocnavi/cs
- 14.47%    5.723      2 Template:Navigation_menu_2
- 10.04%    3.970      1 Template:PropertyView
-  7.60%    3.005     14 Template:KEY
-  6.55%    2.591      2 Template:Docnav
-  6.33%    2.503     34 Template:Version
-  5.79%    2.288      8 Template:VersionPlus
-  4.37%    1.728      1 Template:Variable
+100.00%   34.299      1 -total
+ 21.71%    7.447      1 Template:Sketcher_Tools_navi/cs
+ 19.61%    6.726      1 Template:Userdocnavi/cs
+ 13.88%    4.762      2 Template:Navigation_menu_2
+ 11.05%    3.791      1 Template:PropertyView
+  8.50%    2.916     14 Template:KEY
+  6.33%    2.173      8 Template:VersionPlus
+  5.49%    1.883     34 Template:Version
+  5.44%    1.867      2 Template:Docnav
+  5.31%    1.822      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118121953 and revision id 1740427. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118122154 and revision id 1740429. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
