--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -172,9 +172,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincidentUnified.svg&amp;filetimestamp=20240106131932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincidentUnified.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincidentUnified.html" title="Sketcher ConstrainCoincidentUnified">Vazba toto&#382;nosti (sjednocen&iacute;)</a>: Vytvo&#345;&iacute; soub&#283;&#382;nou vazbu mezi body, zafixuje body na hran&aacute;ch nebo os&aacute;ch nebo vytvo&#345;&iacute; soust&#345;ednou vazbu. Kombinuje n&aacute;stroje <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Vazbu soub&#283;&#382;nosti</a> a <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Vazbu bodu na objektu</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincident.svg&amp;filetimestamp=20240101173005&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Soub&#283;&#382;n&aacute; vazba</a>: Vytvo&#345;&iacute; soub&#283;&#382;nou vazbu mezi body nebo soust&#345;ednou vazbu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPointOnObject.svg&amp;filetimestamp=20240101173043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Vazba bodu na objekt</a>: Upravuje body na hran&aacute;ch nebo os&aacute;ch.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="Sketcher_CompHorVer"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorVer.svg&amp;filetimestamp=20240102154008&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorVer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span>Horizontal/Vertical Constraints:</span></li></ul>
-</div>
+<ul><li><span id="Sketcher_CompHorVer"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorVer.svg&amp;filetimestamp=20240102154008&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorVer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span>Horizont&aacute;ln&iacute;/vertik&aacute;ln&iacute; vazba:</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorVer.svg&amp;filetimestamp=20240102154008&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorVer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorVer.html" title="Sketcher ConstrainHorVer">Horizontal/Vertical Constraint</a>: Constrains lines or pairs of points to be horizontal or vertical, whichever is closest to the current alignment. It combines the <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizontal Constrain</a> and <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertical Constrain</a> tools. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
 </div>
@@ -676,13 +674,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118122155
+Cached time: 20260118122302
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.419 seconds
-Real time usage: 0.591 seconds
-Preprocessor visited node count: 1489/1000000
+CPU time usage: 0.527 seconds
+Real time usage: 0.779 seconds
+Preprocessor visited node count: 1488/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -692,19 +690,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.299      1 -total
- 21.71%    7.447      1 Template:Sketcher_Tools_navi/cs
- 19.61%    6.726      1 Template:Userdocnavi/cs
- 13.88%    4.762      2 Template:Navigation_menu_2
- 11.05%    3.791      1 Template:PropertyView
-  8.50%    2.916     14 Template:KEY
-  6.33%    2.173      8 Template:VersionPlus
-  5.49%    1.883     34 Template:Version
-  5.44%    1.867      2 Template:Docnav
-  5.31%    1.822      1 Template:Variable
+100.00%   67.496      1 -total
+ 25.72%   17.361      1 Template:Sketcher_Tools_navi/cs
+ 14.90%   10.054      1 Template:PropertyView
+ 14.08%    9.503      2 Template:Navigation_menu_2
+ 12.21%    8.240      1 Template:Userdocnavi/cs
+  6.95%    4.694     34 Template:Version
+  6.54%    4.413      8 Template:VersionPlus
+  6.24%    4.215      2 Template:Docnav
+  4.56%    3.075      1 Template:TOCright
+  4.35%    2.934      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118122154 and revision id 1740429. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118122301 and revision id 1740431. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
